package modelo;

public class Campeon {

}
